# cloud-telemetry-intelligence-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/synthetic/: sample_events.jsonl  sample_metrics.csv
src/cloud_telemetry_intelligence_platform/: __init__.py
src/cloud_telemetry_intelligence_platform/evaluation/: __init__.py  cli.py  operational.py  pipeline.py  rendering.py
src/cloud_telemetry_intelligence_platform/ingestion/: __init__.py  cli.py  models.py  pipeline.py  sources.py  validation.py
src/cloud_telemetry_intelligence_platform/preprocessing/: __init__.py  cli.py  pipeline.py  transforms.py
src/cloud_telemetry_intelligence_platform/serving/: __init__.py  api.py  feature_builder.py  registry.py  schemas.py
src/cloud_telemetry_intelligence_platform/training/: __init__.py  cli.py  metrics.py  pipeline.py
tests/: test_evaluation_pipeline.py  test_ingestion_pipeline.py  test_preprocessing_pipeline.py  test_serving_api.py  test_training_pipeline.py
