[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-telemetry-intelligence-platform"
version = "0.1.0"
description = "Phase 1 telemetry ingestion pipeline for anomaly detection workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Yousef Abdelhadi" }
]

[project.scripts]
telemetry-ingest = "cloud_telemetry_intelligence_platform.ingestion.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

