[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-telemetry-intelligence-platform"
version = "0.1.0"
description = "Telemetry ingestion, preprocessing, and model training for anomaly detection workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "joblib>=1.5,<2",
  "scikit-learn>=1.8,<1.9",
  "uvicorn>=0.38,<1",
]
authors = [
  { name = "Yousef Abdelhadi" }
]

[project.scripts]
telemetry-ingest = "cloud_telemetry_intelligence_platform.ingestion.cli:main"
telemetry-preprocess = "cloud_telemetry_intelligence_platform.preprocessing.cli:main"
telemetry-train = "cloud_telemetry_intelligence_platform.training.cli:main"
telemetry-evaluate = "cloud_telemetry_intelligence_platform.evaluation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
